--- a/filme.html
+++ b/filme.html
@@ -14,11 +14,17 @@
         Witness the unparalleled energy of aespa’s live performance captured from their electrifying show at London's O2 Arena, their first-ever UK show. With their futuristic stage visuals, high-energy choreography and captivating vocals, they fiercely commanded the stage delivering fan favourites including <strong>‘Next Level’, ‘Savage’, ‘Girls’, ‘Spicy’ and ‘Black Mamba’.</strong> The film also highlights individual performances by each member, complemented by exclusive behind-the-scenes interviews, offering a glimpse behind the curtain.<br>
         With over 2.8 billion YouTube views at NEXT LEVEL MV and much raved-about performances; the fierce foursome of <em>KARINA, GISELLE, WINTER and NINGNING</em> are rapidly cementing their status as killer performers on and off screen.<br>
         Don't miss this celebration of music and talent that captures the spirit and passion of aespa's journey so far.</p> 
+        <strong><p>Gênero: Documentário<strong></p>
 
         <iframe width="1232" height="693" src="https://www.youtube.com/embed/F4C5x31LeYI" title="aespa: WORLD TOUR in cinemas - official trailer" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-
+        <nav>   
         <ul>
             <li>Apple TV</li>
             <li>Cinemas</li>
+        <ul>
+        </nav>
+        <footer>
+            
+        </footer>
 </body>
 </html>
