--- a/filme.html
+++ b/filme.html
@@ -6,6 +6,15 @@
     <title>Filme</title>
 </head>
 <body>
+    <header>
+        <a href="/index.html">
+            <img src="/images/logo.png" alt="logo">
+        </a>
+            <ul>
+                <li><a href="/index.html"></a></li>
+                <li><a href="/livro.html"></a></li>
+                <li><a href="/musica.html"></a></li>
+            </ul>
     <h1> aespa: WORLD TOUR in cinemas</h1>
     <img src="/images/filme.jpg" alt = "poster"> 
     <p> Global hitmaker aespa's first concert movie bursts onto the screen in cinemas worldwide!
@@ -24,7 +33,8 @@
         <ul>
         </nav>
         <footer>
-            
+            E-mail para contato: protect@smtown.com
+            <a href="https://www.instagram.com/aespa_official/"> <img src="/images/logo_insta.webp" alt="instagram"></a>
         </footer>
 </body>
 </html>
