--- a/index.html
+++ b/index.html
@@ -3,9 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Index</title>
+    <title>Início</title>
 </head>
 <body>
+    <header>
+<a href="/index.html">
+    <img src="/images/logo.png" alt="logo">
+</a>
+    <ul>
+        <li><a href="/filme.html"></a></li>
+        <li><a href="/livro.html"></a></li>
+        <li><a href="/musica.html"></a></li>
+    </ul>
+</header>
     <h1>AESPA</h1>
     <img src="/images/artista.avif" alt = "artista"> 
     <p> aespa (estilizado como æspa; em hangul: 에스파) é um grupo feminino sul-coreano de K-Pop formado pela SM Entertainment. Seu debut acomteceu em 17 de novembro de 2020 com o single 'Black Mamba'. O grupo é formado por quatro integrantes: Ningning, Winter, Giselle e Karina. 
@@ -13,5 +23,9 @@
     <img src="/images/filme.jpg">
     <img src="/images/livro.jpg">
     <img src="/images/musica.avif">
+<footer>
+    E-mail para contato: protect@smtown.com
+    <a href="https://www.instagram.com/aespa_official/"> <img src="/images/logo_insta.webp" alt="instagram"></a>
+</footer>
 </body>
 </html>
