--- a/livro.html
+++ b/livro.html
@@ -3,9 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Livro</title>
 </head>
 <body>
-    
+    <header>
+        <a href="/index.html">
+            <img src="/images/logo.png" alt="logo">
+        </a>
+            <ul>
+                <li><a href="/index.html"></a></li>
+                <li><a href="/filme.html"></a></li>
+                <li><a href="/musica.html"></a></li>
+            </ul>
+    <h1>aespa - MY WORLD The 3rd Mini Album (Target Exclusive, CD) (ZINE Ver.) SM Entertainment</h1>
+    <img src="/images/livro.jpg" alt="livro">
+    <p>Awesome <em>collector's Edition</em>, Lots of extra's inside, 4 photo cards, plus extra random photo card, folded poster, lyric book book filled with lots of pictures on each page. <em>Hard to find!</em></p>
+    <p><strong>Genero: Biografia</p>strong></p>
+    <h2>Índice </h2>
+    <ul>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+    </ul>
+    <p>Preço: R$383,71</p>
+    <a href="https://www.amazon.com.br/aespa-WORLD-Target-Exclusive-Entertainment/dp/B0D47R67W6/ref=sr_1_5?dib=eyJ2IjoiMSJ9.NAN9mMFEcZr5cWWLIXm3SK_0xGCFjoG3EEJpBLAruYLBT6lhMsXCAigcM5_jB6N5XNFKmRb2aqS54Df2p_ZwPtaG6nRmnXWCW3bDI0la4T7r5ujefxPixWKfVGlthrf244N6Jx2zksQD0vpmLnY5ue_Mi0JDCxBv9Wjv2uEBhFH5XJcEQ5MFnXa3R-q3D89BvFIx_HtBrzfpLNxfF-0V1_1xNF8s39Uig-jBH67vMXV7aoA5sFiVGCBUNDRsnBLfleFgBtgn_e982AKcKNSoS_AKpCNbr-BlKeWQLKhxwAo.cM48ihH52bAVBYkMIZzZ7PJhpfer6oEGuJJ0JyDSKb8&dib_tag=se&keywords=aespa&qid=1725405935&sr=8-5&ufe=app_do%3Aamzn1.fos.4bb5663b-6f7d-4772-84fa-7c7f565ec65b">Compre agora!</a>
+    <footer>
+        E-mail para contato: protect@smtown.com
+        <a href="https://www.instagram.com/aespa_official/"> <img src="/images/logo_insta.webp" alt="instagram"></a>
+    </footer>
 </body>
 </html>
