--- a/livro.html
+++ b/livro.html
@@ -11,9 +11,9 @@
             <img src="/images/logo.png" alt="logo">
         </a>
             <ul>
-                <li><a href="/index.html"></a></li>
-                <li><a href="/filme.html"></a></li>
-                <li><a href="/musica.html"></a></li>
+                <li><a href="/filme.html">Filme</a></li>
+        <li><a href="/livro.html">Livro</a></li>
+        <li><a href="/musica.html">Música</a></li>li>
             </ul>
     <h1>aespa - MY WORLD The 3rd Mini Album (Target Exclusive, CD) (ZINE Ver.) SM Entertainment</h1>
     <img src="/images/livro.jpg" alt="livro">
