--- a/filme.html
+++ b/filme.html
@@ -11,9 +11,9 @@
             <img src="/images/logo.png" alt="logo">
         </a>
             <ul>
-                <li><a href="/index.html"></a></li>
-                <li><a href="/livro.html"></a></li>
-                <li><a href="/musica.html"></a></li>
+                <li><a href="/filme.html">Filme</a></li>
+                <li><a href="/livro.html">Livro</a></li>
+                <li><a href="/musica.html">Música</a></li>
             </ul>
     <h1> aespa: WORLD TOUR in cinemas</h1>
     <img src="/images/filme.jpg" alt = "poster"> 
