--- a/musica.html
+++ b/musica.html
@@ -11,9 +11,9 @@
             <img src="/images/logo.png" alt="logo">
         </a>
             <ul>
-                <li><a href="/index.html"></a></li>
-                <li><a href="/filme.html"></a></li>
-                <li><a href="/livro.html"></a></li>
+                <li><a href="/filme.html">Filme</a></li>
+        <li><a href="/livro.html">Livro</a></li>
+        <li><a href="/musica.html">Música</a></li>
             </ul>
             </header>
             <img src="/images/musica.avif" alt="album">
