--- a/livro.html
+++ b/livro.html
@@ -13,20 +13,41 @@
             <ul>
                 <li><a href="/filme.html">Filme</a></li>
         <li><a href="/livro.html">Livro</a></li>
-        <li><a href="/musica.html">Música</a></li>li>
+        <li><a href="/musica.html">Música</a></li>
             </ul>
     <h1>aespa - MY WORLD The 3rd Mini Album (Target Exclusive, CD) (ZINE Ver.) SM Entertainment</h1>
     <img src="/images/livro.jpg" alt="livro">
     <p>Awesome <em>collector's Edition</em>, Lots of extra's inside, 4 photo cards, plus extra random photo card, folded poster, lyric book book filled with lots of pictures on each page. <em>Hard to find!</em></p>
     <p><strong>Genero: Biografia</p>strong></p>
+
     <h2>Índice </h2>
-    <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-    </ul>
+    <ol>
+        <li>Prólogo:<em>Welcome To MY World (Feat. nævis)</em></li> 
+        <ol>
+            <li>Um convite sonoro que nos transporta para as paisagens metafísicas do universo aespa, onde realidade e ficção colidem em harmonia.</li>
+        </ol>
+        <li><strong>Capítulo I:</strong> <em>Spicy</em></li>
+        <ol>    
+            <li>A narrativa central, onde a juventude encontra sua voz em um cenário vibrante e cheio de energia, evocando a liberdade que só o desconhecido pode oferecer.</li>
+        </ol>
+        <li><strong>Capítulo II:</strong> <em>Salty & Sweet</em></li> 
+        <ol>
+            <li>Um diálogo de contrastes, onde os opostos coexistem em uma dança sensorial, revelando as camadas escondidas da psique.</li>
+        </ol>
+        <li><strong>Capítulo III:</strong> <em>Thirsty</em></li>
+        <ol>
+            <li>Uma jornada através dos desertos da alma, onde a sede por mais transcende o físico, mergulhando no profundo desejo de conexão e significado.</li>
+        </ol>
+        <li><strong>Capítulo IV:</strong> <em>I'm Unhappy</em></li> 
+        <ol>
+            <li>Uma introspecção melancólica, explorando as sombras que perseguem a luz da felicidade, questionando a verdadeira natureza do contentamento.</li>
+        </ol>
+        <li><strong>Epílogo:</strong> <em>'Til We Meet Again</em></li>
+        <ol>
+            <li>Um adeus temporário, carregado de promessas e esperanças, encerrando a obra com uma nota de saudade e expectativa pelo reencontro.</li>
+      </ol>
+      </ol>
+
     <p>Preço: R$383,71</p>
     <a href="https://www.amazon.com.br/aespa-WORLD-Target-Exclusive-Entertainment/dp/B0D47R67W6/ref=sr_1_5?dib=eyJ2IjoiMSJ9.NAN9mMFEcZr5cWWLIXm3SK_0xGCFjoG3EEJpBLAruYLBT6lhMsXCAigcM5_jB6N5XNFKmRb2aqS54Df2p_ZwPtaG6nRmnXWCW3bDI0la4T7r5ujefxPixWKfVGlthrf244N6Jx2zksQD0vpmLnY5ue_Mi0JDCxBv9Wjv2uEBhFH5XJcEQ5MFnXa3R-q3D89BvFIx_HtBrzfpLNxfF-0V1_1xNF8s39Uig-jBH67vMXV7aoA5sFiVGCBUNDRsnBLfleFgBtgn_e982AKcKNSoS_AKpCNbr-BlKeWQLKhxwAo.cM48ihH52bAVBYkMIZzZ7PJhpfer6oEGuJJ0JyDSKb8&dib_tag=se&keywords=aespa&qid=1725405935&sr=8-5&ufe=app_do%3Aamzn1.fos.4bb5663b-6f7d-4772-84fa-7c7f565ec65b">Compre agora!</a>
     <footer>
