--- a/musica.html
+++ b/musica.html
@@ -30,6 +30,9 @@
                 <li>You</li>
                 <li>Better Things</li>
             </ol>
+            <h3>ONDE OUVIR</h3>
+            <a href="https://open.spotify.com/intl-pt/album/5NMtxQJy4wq3mpo3ERVnLs?si=doKsjKlRSgKU_E4Y2wuEpA"> <img src="/images/logo_spotify.webp" alt="spotify"></a>
+            <a href="https://deezer.page.link/XrDWfpMskJRHDutq8"> <img src="/images/logo_deezer.png" alt="deezer"></a>
             <footer>
                 E-mail para contato: protect@smtown.com
                 <a href="https://www.instagram.com/aespa_official/"> <img src="/images/logo_insta.webp" alt="instagram"></a>
