--- a/filme.html
+++ b/filme.html
@@ -28,8 +28,8 @@
         <iframe width="1232" height="693" src="https://www.youtube.com/embed/F4C5x31LeYI" title="aespa: WORLD TOUR in cinemas - official trailer" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         <nav>   
         <ul>
-            <li>Apple TV</li>
-            <li>Cinemas</li>
+            <li><a href="https://tv.apple.com/channel/tvs.sbd.4000">AppleTV</a></li>
+            <li><a href="https://www.aespaworldtourincinemas.com/">Cinemas</a></li>
         <ul>
         </nav>
         <footer>
