--- a/livro.html
+++ b/livro.html
@@ -18,7 +18,7 @@
     <h1>aespa - MY WORLD The 3rd Mini Album (Target Exclusive, CD) (ZINE Ver.) SM Entertainment</h1>
     <img src="/images/livro.jpg" alt="livro">
     <p>Awesome <em>collector's Edition</em>, Lots of extra's inside, 4 photo cards, plus extra random photo card, folded poster, lyric book book filled with lots of pictures on each page. <em>Hard to find!</em></p>
-    <p><strong>Genero: Biografia</p>strong></p>
+    <p><strong>Genero: Biografia</strong></p>
 
     <h2>Índice </h2>
     <ol>
